[package]
name = "mollusk-svm-account-fetcher-rpc"
description = "JSON-RPC account fetcher for Mollusk SVM"
documentation = "https://docs.rs/mollusk-svm-account-fetcher-rpc"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
base64 = { workspace = true }
mollusk-svm-account-fetcher-serde = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-sdk-ids = { workspace = true }
tokio = { workspace = true, features = ["full"] }
